# rangoons

./: COMMUNITY.md  COMPETITIVE_PARITY.md  CONTRIBUTING.md  GAP_ANALYSIS.md  PORTFOLIO.md  README.md  main.py  repos.txt
.github/workflows/: pages.yml
RangoonsAI/: README.md
RangoonsCast/: README.md
RangoonsCast/CastApp/: AuthActivity.kt  MainActivity.kt  cast  package-lock.json  package.json
RangoonsCore/: .gitconfig  .gitmodules  Cargo.toml  Dockerfile  docker-compose.yml  hello_world.rs  huobz  huobz.pub  package-lock.json  package.json  requirements.txt  test_core.py  urls.py  workspace.package
RangoonsCore/.github/: PULL_REQUEST_TEMPLATE.md
RangoonsCore/.ssh/: huobz-key.pem  known_hosts  known_hosts.old
RangoonsCore/HuobzcoinWallet/: App.js  package-lock.json  package.json
RangoonsCore/ai/: fraud_dataset.csv  fraud_detection.py  fraud_nn_model.h5  huobzai_api.py  huobzai_fraud_api.py  huobzedge_fraud_api.py  recommender.py  scaler.pkl  train_fraud_nn.py
RangoonsCore/api/: api.py  health_api.py  id_api.py  properties_api.py  savings_api.py  tax_api.py  user_routes.py
RangoonsCore/automation/: deploy.py  deployment.py  (+1 more)
RangoonsCore/crates/common_utils/: Cargo.toml
RangoonsLang/: README.md  auto_commit.sh  hello.huobz  huobzlang_syntax.huobz  requirements.txt  test_allocate_gpu.py  test_allocate_storage.py  test_emulator.py  test_establish_connection.py
RangoonsNifdu/: README.md  requirements.txt
ai_engine/: inference.py
docs/: index.html
rangoonscoins/: rangoonscoins.py
rangoonsedge/: auth.py  edge_computing.py  rangoonsedge_main.py
(+195 files in other folders)
